@@ -87,6 +87,7 @@ requests from users, including:
   Phil Smith
   Matthew Soldner
   Corey Sparks
+  Terry Therneau
   Takahiro Tsuchiya
   Richard Valliant
   Tobias Verbeke
